# express-ts/src/routes.ts
@@ -4,7 +4,9 @@
 import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import { HelloController } from './controllers/helloController';
+import { HelloZodController } from './controllers/helloZod.controller';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { HelloController } from './controllers/hello.controller';
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 
 
@@ -12,6 +14,11 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "msgZodObj": {
+        "dataType": "refAlias",
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"msg":{"dataType":"string","required":true},"id":{"dataType":"double","required":true}},"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "msgObj": {
         "dataType": "refAlias",
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"msg":{"dataType":"string","required":true}},"validators":{}},
@@ -34,20 +41,140 @@ export function RegisterRoutes(app: Router) {
 
 
     
-        app.get('/hello/:msg',
-            ...(fetchMiddlewares<RequestHandler>(HelloController)),
-            ...(fetchMiddlewares<RequestHandler>(HelloController.prototype.getMessage)),
+        const argsHelloZodController_getMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                msg: {"in":"path","name":"msg","required":true,"dataType":"string"},
+        };
+        app.get('/helloZod/:msg',
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController)),
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController.prototype.getMessage)),
 
-            async function HelloController_getMessage(request: ExRequest, response: ExResponse, next: any) {
-            const args: Record<string, TsoaRoute.ParameterSchema> = {
-                    msg: {"in":"path","name":"msg","required":true,"dataType":"string"},
-            };
+            async function HelloZodController_getMessage(request: ExRequest, response: ExResponse, next: any) {
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloZodController_getMessage, request, response });
+
+                const controller = new HelloZodController();
+
+              await templateService.apiHandler({
+                methodName: 'getMessage',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloZodController_logMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                msgBody: {"in":"body","name":"msgBody","required":true,"ref":"msgZodObj"},
+        };
+        app.post('/helloZod',
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController)),
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController.prototype.logMessage)),
+
+            async function HelloZodController_logMessage(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloZodController_logMessage, request, response });
+
+                const controller = new HelloZodController();
+
+              await templateService.apiHandler({
+                methodName: 'logMessage',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 201,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloZodController_updateMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                msgBody: {"in":"body","name":"msgBody","required":true,"ref":"msgZodObj"},
+        };
+        app.patch('/helloZod',
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController)),
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController.prototype.updateMessage)),
+
+            async function HelloZodController_updateMessage(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloZodController_updateMessage, request, response });
+
+                const controller = new HelloZodController();
+
+              await templateService.apiHandler({
+                methodName: 'updateMessage',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: 200,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloZodController_removeMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"query","name":"id","required":true,"dataType":"double"},
+        };
+        app.delete('/helloZod',
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController)),
+            ...(fetchMiddlewares<RequestHandler>(HelloZodController.prototype.removeMessage)),
+
+            async function HelloZodController_removeMessage(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloZodController_removeMessage, request, response });
+
+                const controller = new HelloZodController();
+
+              await templateService.apiHandler({
+                methodName: 'removeMessage',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloController_getMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                msg: {"in":"path","name":"msg","required":true,"dataType":"string"},
+        };
+        app.get('/hello/:msg',
+            ...(fetchMiddlewares<RequestHandler>(HelloController)),
+            ...(fetchMiddlewares<RequestHandler>(HelloController.prototype.getMessage)),
+
+            async function HelloController_getMessage(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloController_getMessage, request, response });
 
                 const controller = new HelloController();
 
@@ -64,20 +191,20 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloController_logMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                msgBody: {"in":"body","name":"msgBody","required":true,"ref":"msgObj"},
+        };
         app.post('/hello',
             ...(fetchMiddlewares<RequestHandler>(HelloController)),
             ...(fetchMiddlewares<RequestHandler>(HelloController.prototype.logMessage)),
 
             async function HelloController_logMessage(request: ExRequest, response: ExResponse, next: any) {
-            const args: Record<string, TsoaRoute.ParameterSchema> = {
-                    msgBody: {"in":"body","name":"msgBody","required":true,"ref":"msgObj"},
-            };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloController_logMessage, request, response });
 
                 const controller = new HelloController();
 
@@ -94,20 +221,20 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloController_updateMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                msgBody: {"in":"body","name":"msgBody","required":true,"ref":"msgObj"},
+        };
         app.patch('/hello',
             ...(fetchMiddlewares<RequestHandler>(HelloController)),
             ...(fetchMiddlewares<RequestHandler>(HelloController.prototype.updateMessage)),
 
             async function HelloController_updateMessage(request: ExRequest, response: ExResponse, next: any) {
-            const args: Record<string, TsoaRoute.ParameterSchema> = {
-                    msgBody: {"in":"body","name":"msgBody","required":true,"ref":"msgObj"},
-            };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloController_updateMessage, request, response });
 
                 const controller = new HelloController();
 
@@ -124,20 +251,20 @@ export function RegisterRoutes(app: Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsHelloController_removeMessage: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"query","name":"id","required":true,"dataType":"double"},
+        };
         app.delete('/hello',
             ...(fetchMiddlewares<RequestHandler>(HelloController)),
             ...(fetchMiddlewares<RequestHandler>(HelloController.prototype.removeMessage)),
 
             async function HelloController_removeMessage(request: ExRequest, response: ExResponse, next: any) {
-            const args: Record<string, TsoaRoute.ParameterSchema> = {
-                    id: {"in":"query","name":"id","required":true,"dataType":"double"},
-            };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsHelloController_removeMessage, request, response });
 
                 const controller = new HelloController();
 
